# sil

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
bootstrap/: CMakeLists.txt  main.cpp
cmake/: AddGitSubmodule.cmake  ConfigSafeGuard.cmake  LTO.cmake  Sanitisers.cmake  Warnings.cmake
config/: CMakeLists.txt  Config.hpp.in
engine/: CMakeLists.txt
engine/includes/: CMakeLists.txt  SilEngine.h
engine/includes/Config/: AppConfig.h  EngineConfig.h  RenderConfig.h  RenderingFeatures.h  Version.h
engine/includes/Debug/: Logger.h  VulkanDebugAdaptor.h
engine/includes/Rendering/: GLFWInstance.h  GraphicsContext.h  GraphicsDevice.h  RenderQueue.h  Renderer.h  Swapchain.h  Window.h
engine/includes/Subsystems/: RenderSubsystem.h
engine/includes/Vulkan/: VkDevice.h  VkDeviceSelector.h  VkInstance.h  VkSurface.h  VkUtils.h
engine/src/: CMakeLists.txt  SilEngine.cpp
engine/src/Config/: RenderingFeatures.cpp
engine/src/Debug/: Logger.cpp  VulkanDebugAdaptor.cpp
engine/src/Rendering/: GraphicsContext.cpp  GraphicsDevice.cpp  Renderer.cpp  Swapchain.cpp  Window.cpp
engine/src/Subsystems/: RenderingSubsystem.cpp
engine/src/Vulkan/: VkDeviceSelector.cpp  VkSurface.cpp
tools/: CMakeLists.txt
tools/stagehand/: CMakeLists.txt  main.cpp
